# ducktaipe-sprint

./: .dockerignore  .gitignore  README.md  deploy.sh  init.sh  pyproject.toml  run_local.sh  test_mcp.py
agents/content_builder/: agent.py  pyproject.toml
agents/gatekeeper/: agent.py  pyproject.toml
agents/judge/: agent.py  pyproject.toml
agents/orchestrator/: adk_app.py  agent.py  evalsetd378a2.evalset.json  pyproject.toml  run.sh
agents/researcher/: agent.py  pyproject.toml
app/: main.py  pyproject.toml
app/frontend/: app.js  index.html  style.css  tutorial.html
mcp_server/: Dockerfile  __init__.py  main.py  pyproject.toml
