[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP Server for Repair Guide Tools"
requires-python = ">=3.10,<3.14"
dependencies = [
    "mcp>=1.1.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "sse-starlette>=2.1.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.12.0",
    "ddgs>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
